--- a/ProblemSets/PS4/HW4.ipynb
+++ b/ProblemSets/PS4/HW4.ipynb
@@ -230,18 +230,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Analytical Solution of the distribution should converge to [1.         0.76442731 0.12303173 0.5482917  0.34752325]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "eigvals, eigvecmat = LA.eig(P_matrix.T)\n",
-    "print('Analytical Solution of the distribution should converge to',eigvals)"
+    "eigvals, eigvecmat = LA.eig(P_matrix.T)"
    ]
   },
   {
@@ -257,20 +248,16 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([ 2.17077263e+14,  2.14726200e+14, -3.39142230e+13, -2.30347862e+14,\n",
-       "       -1.67541379e+14])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Analytical Solution of the distribution should converge to [0.11024071 0.24229984 0.32049858 0.23188278 0.09507808]\n"
+     ]
     }
    ],
    "source": [
-    "eigvec = eigvecmat[:, 1] / eigvecmat[:, 1].sum()\n",
-    "eigvec"
+    "eigvec = eigvecmat[:, 0] / eigvecmat[:, 0].sum()\n",
+    "print('Analytical Solution of the distribution should converge to',eigvec)"
    ]
   },
   {
